commited for google map

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1pmZyMugtn6zs6cPoqtTAR0fCwOIc20I&libraries=places" async defer></script>
 <script src="js/jquery-ui.js"></script>
 <script src="js/easyResponsiveTabs.js" type="text/javascript"></script>
-<script LANGUAGE="JavaScript" type="text/javascript"src="js/modalPreview.js"></script>
+<script LANGUAGE="JavaScript" type="text/javascript" src="js/modalPreview.js"></script>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" src="js/jquery.min.js"></SCRIPT>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" src="js/jquery.touchSwipe.min.js"></SCRIPT>
 <script src="js/bootstrap.min.js"></script>
@@ -39,6 +39,7 @@
 <script src="js/js.cookie.js" charset="utf-8" type="text/javascript"></script>
 <script src="js/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
 <script src="js/jssor.slider-22.1.5.mini.js" type="text/javascript" data-library="jssor.slider.mini" data-version="22.1.5"></script>
+<script src="js/gps.js"></script>
 </head>
 <body  onload="init();" >  
 <!--login modal-->  
@@ -52,7 +53,7 @@
             </div>
 		 </div>
 		  <div class="footer">
-			<p>&copy; Copyright 2017. All Rights Reserved.<br>
+			<p>&copy; Copyright 2018. All Rights Reserved.<br>
 			  Expenzing Expense Management System</p>
 		  </div>
 	  </div>
